--- a/my-app/index.html
+++ b/my-app/index.html
@@ -9,12 +9,17 @@
   </head>
   <body>
     <h1>Sass Test</h1>
+    <h2>Test 2</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
       temporibus delectus quia eum suscipit, debitis quod corporis consectetur
       ex deleniti incidunt earum quibusdam voluptates sint officiis facilis,
       architecto doloremque ducimus.
     </p>
+    <span class="purple"
+      >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
+      eum.</span
+    >
     <button>Sass</button>
 
     <script src="./dist/js/app.js"></script>
